Fix scroll error (#10)
* Add local storage (#9)

* fix horizontal scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -534,12 +534,11 @@ h2 {
   flex-direction: column;
   justify-content: center;
   margin-bottom: 0;
-  padding: 0 5px;
-  width: 90%;
+  width: 100%;
 }
 
 .input-style {
-  width: 100%;
+  width: 82%;
   height: 48px;
   border-radius: 4px;
   background: rgb(255 255 255 / 100%);
@@ -549,10 +548,9 @@ h2 {
 
 input {
   font-size: 15px;
-  padding: 9px 22px;
+  padding: 10px;
   line-height: 24px;
   font-family: Inter, sans-serif;
-  font-weight: 400;
 }
 
 .input-style:focus {
@@ -566,7 +564,7 @@ input {
   font-weight: 400;
   font-size: 15px;
   line-height: 24px;
-  padding: 15px 20px;
+  padding: 10px;
   font-family: Inter, sans-serif;
 }
 
